# scsynth-interop

./: .gitignore  CMakeLists.txt  scsynth-interop.cpp  scsynth-interop.h
cmake_modules/: FindSuperCollider.cmake
